# driftset

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.d2
reports/: PROVENANCE.md  affinity_coverage.json  shift_coverage.json
scripts/: run_affinity_coverage.py  run_shift_coverage.py
src/driftset/: __init__.py
src/driftset/adapters/: __init__.py  affinity.py  base.py  structure.py  tabular.py
src/driftset/conformal/: __init__.py  binning.py  metrics.py  split.py  weighted.py
src/driftset/datasets/: __init__.py  zenodo_affinity.py
src/driftset/decision/: __init__.py  api.py  report.py
src/driftset/shift/: __init__.py  detector.py
tests/: test_affinity_report.py  test_core_conformal.py  test_dataset_loader.py  test_smoke.py  test_structure_decision.py  test_weighted_shift.py
