# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftset"
version = "0.1.0a1"
description = "Reproducible, GPU-free conformal coverage harness for scientific foundation models under distribution shift"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "hinanohart" }]
keywords = [
  "conformal-prediction",
  "uncertainty-quantification",
  "distribution-shift",
  "calibration",
  "alphafold",
  "boltz-2",
  "binding-affinity",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Development Status :: 3 - Alpha",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  # CP backends (BSD-3). crepes-weighted is single-maintainer -> exact pin.
  "crepes>=0.9,<0.10",
  "crepes-weighted==0.1.3",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/hinanohart/driftset"
Repository = "https://github.com/hinanohart/driftset"

[tool.hatch.build.targets.wheel]
packages = ["src/driftset"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["driftset"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
